--- a/src/composer.json
+++ b/src/composer.json
@@ -7,5 +7,13 @@
     "psr-4": {
       "App\\": "app/"
     }
+  },
+  "autoload-dev": {
+    "psr-4": {
+      "Tests\\": "tests/"
+    }
+  },
+  "require-dev": {
+    "phpunit/phpunit": "^10.0"
   }
 }
