--- a/src/composer.json
+++ b/src/composer.json
@@ -2,7 +2,11 @@
   "require": {
     "ramsey/uuid": "^4.7",
     "vlucas/phpdotenv": "^5.6",
-    "psr/container": "^2.0"
+    "psr/container": "^2.0",
+    "doctrine/dbal": "^4.0",
+    "doctrine/orm": "^3.1",
+    "symfony/cache": "^7.0",
+    "doctrine/migrations": "^3.7"
   },
   "autoload": {
     "psr-4": {
