--- a/src/composer.json
+++ b/src/composer.json
@@ -8,7 +8,8 @@
     "symfony/cache": "^7.0",
     "doctrine/migrations": "^3.7",
     "illuminate/database": "^11.5",
-    "illuminate/events": "^11.5"
+    "illuminate/events": "^11.5",
+    "guzzlehttp/guzzle": "^7.8"
   },
   "autoload": {
     "psr-4": {
