--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -6,6 +6,8 @@ services:
     container_name: php_app
     restart: always
     working_dir: /var/www/
+    extra_hosts:
+      - host.docker.internal:host-gateway
     volumes:
       - ../src:/var/www
 
