--- a/src/composer.json
+++ b/src/composer.json
@@ -9,7 +9,8 @@
     "doctrine/migrations": "^3.7",
     "illuminate/database": "^11.5",
     "illuminate/events": "^11.5",
-    "guzzlehttp/guzzle": "^7.8"
+    "guzzlehttp/guzzle": "^7.8",
+    "twig/twig": "^3.9"
   },
   "autoload": {
     "psr-4": {
