--- a/src/composer.json
+++ b/src/composer.json
@@ -12,7 +12,8 @@
     "guzzlehttp/guzzle": "^7.8",
     "twig/twig": "^3.9",
     "symfony/twig-bridge": "^7.0",
-    "symfony/webpack-encore-bundle": "^2.1"
+    "symfony/webpack-encore-bundle": "^2.1",
+    "vlucas/valitron": "^1.4"
   },
   "autoload": {
     "psr-4": {
