--- a/src/composer.json
+++ b/src/composer.json
@@ -1,19 +1,18 @@
 {
   "require": {
-    "ramsey/uuid": "^4.7",
+    "ext-pdo": "*",
     "vlucas/phpdotenv": "^5.6",
-    "psr/container": "^2.0",
     "doctrine/dbal": "^4.0",
     "doctrine/orm": "^3.1",
     "symfony/cache": "^7.0",
     "doctrine/migrations": "^3.7",
-    "illuminate/database": "^11.5",
-    "illuminate/events": "^11.5",
-    "guzzlehttp/guzzle": "^7.8",
     "twig/twig": "^3.9",
-    "symfony/twig-bridge": "^7.0",
-    "symfony/webpack-encore-bundle": "^2.1",
-    "vlucas/valitron": "^1.4"
+    "vlucas/valitron": "^1.4",
+    "slim/slim": "4.*",
+    "slim/psr7": "^1.6",
+    "slim/twig-view": "^3.4",
+    "twig/intl-extra": "^3.9",
+    "php-di/php-di": "^7.0"
   },
   "autoload": {
     "psr-4": {
