--- a/src/composer.json
+++ b/src/composer.json
@@ -12,7 +12,8 @@
     "slim/psr7": "^1.6",
     "slim/twig-view": "^3.4",
     "twig/intl-extra": "^3.9",
-    "php-di/php-di": "^7.0"
+    "php-di/php-di": "^7.0",
+    "symfony/console": "^7.0"
   },
   "autoload": {
     "psr-4": {
