--- a/src/composer.json
+++ b/src/composer.json
@@ -13,7 +13,9 @@
     "slim/twig-view": "^3.4",
     "twig/intl-extra": "^3.9",
     "php-di/php-di": "^7.0",
-    "symfony/console": "^7.0"
+    "symfony/console": "^7.0",
+    "symfony/twig-bridge": "^7.0",
+    "symfony/webpack-encore-bundle": "^2.1"
   },
   "autoload": {
     "psr-4": {
