webpack core container binding issue fixed

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ src/.phpunit.result.cache
 src/.phpunit.cache/
 src/storage/cache/
 src/public/build
+src/storage/mail/1719438659_667c8d43c569b0.98365830.eml
