--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -39,6 +39,7 @@ services:
     restart: always
     volumes:
       - "./storage/mysql:/var/lib/mysql"
+      - "./mysql/:/etc/mysql/conf.d/"
     environment:
       MYSQL_ROOT_PASSWORD: root
     ports:
@@ -76,7 +77,7 @@ services:
 
   redis:
     image: redis:latest
-    container_name: expennies-redis
+    container_name: php_redis
     restart: always
     ports:
       - "6379:6379"
